# gps-tracker

./: README.md
case/: case-mount.slvs  case-mount.stl  display-mount.slvs  display-mount.stl  mount-knob.slvs  mount-knob.stl  reed-switch-mount-2.slvs  reed-switch-mount-2.stl  reed-switch-mount-clamp.slvs  reed-switch-mount-clamp.stl  reed-switch-mount-holder.slvs  reed-switch-mount-holder.stl  reed-switch-mount.slvs  reed-switch-mount.stl  switch dimensions.slvs  switch-actuator.3mf  switch-actuator.slvs  switch-actuator.stl  switch-body1.slvs  switch-body2.slvs  switch-body2.stl
case/button/: actuator.3mf  actuator.slvs  actuator.stl  assembly.slvs  dimensions.slvs  mount.3mf  mount.slvs  mount.stl
case/flip-switch/: lever.3mf  lever.slvs  lever.stl  mount.3mf  mount.slvs  mount.stl
case/rotary-switch/: core.slvs  dimensions.slvs  embedded-nut.slvs  knob.3mf  knob.slvs  knob.stl
firmware/: .gitignore  Cargo.toml  Embed.toml  LICENSE  memory.x  openocd.cfg  openocd.gdb
firmware/.cargo/: config
firmware/src/: debouncer.rs  fonts.rs  gps.rs  layout.rs  main.rs  memory_display.rs  screens.rs  u8writer.rs
firmware/src/assets/: Makefile  bignumbers.raw  bignumbers.xcf  mednumbers.raw  mednumbers.xcf
