[package]
name = "hexalamp"
version = "0.1.0"
authors = ["Tim Docker <tim@dockerz.net>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.8", features = ["device"] }
panic-rtt-target = {version = "0.1.1", features = ["cortex-m"]}
rtt-target = {version = "0.3", features = ["cortex-m"]}
stm32f1xx-hal = {version = "0.7", features = ["rt", "stm32f103", "medium"]}
cortex-m-rtic = "0.5"
embedded-hal = "0.2.3"
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"
ili9341 = "0.5.0"
profont = "0.5.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
nb = "1.0.0"
nmea0183 = "0.2.3"
