[package]
name = "gpstracker"
version = "0.1.0"
authors = ["Tim Docker <tim@dockerz.net>"]
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.6.8", features = ["device"] }
panic-rtt-target = {version = "0.1.1", features = ["cortex-m"]}
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
cortex-m-rtic = "0.5"
embedded-hal = "0.2.3"
embedded-graphics = "0.7.1"
ili9341 = "0.5.0"
profont = "0.5.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
stm32f4xx-hal = { version = "0.9.0", features = ["rt", "stm32f401"] }
nb = "1.0.0"
nmea0183 = "0.2.3"
