[package]
name = "gpstracker"
version = "0.1.0"
authors = ["Tim Docker <tim@dockerz.net>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
panic-rtt-target = {version = "0.1.1", features = ["cortex-m"]}
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
cortex-m-rtic = { version = "0.5.8", default-features = false, features = ["cortex-m-7"] }
embedded-hal = "0.2.3"
embedded-graphics = "0.7.1"
profont = "0.5.0"
stm32f4xx-hal = { version = "0.12.0", features = ["rt", "stm32f401"] }
nb = "1.0.0"
nmea0183 = "0.3.0"
micromath = "2.0.0"
